--- a/index.html
+++ b/index.html
@@ -25,6 +25,26 @@
             top: 0;
             z-index: 1000;
         }
+
+        .hero-section {
+            background: url('assets/images/a\ serene\ wellness\ environment\ without\ people.png') no-repeat center center;
+            background-size: cover;
+            height: 50vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            text-align: center;
+        }
+
+        .hero-section h1 {
+            font-size: 3rem;
+            margin-bottom: 1rem
+        }
+
+        .hero-section .btn {
+            font-size: 1.25rem;
+        }
     </style>
 </head>
 
@@ -43,23 +63,135 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active fw-bold custom-text-color" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link custom-text-color" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link custom-text-color" href="#">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link custom-text-color" href="#">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+    <section class="hero-section">
+        <div>
+            <h1>Welcome to Seven Seas Spa</h1>
+            <a href="#contact" class="btn btn-primary">Contact Us</a>
+        </div>
+    </section>
+    <section class="container my-5">
+        <h2 class="text-center">Our Services</h2>
+            <div class="row text-center">
+                <div class="col-md-3">
+                    <div class="card mb-4 shadow-sm">
+                        <img src="assets/images/yoga.png" class="card-img-top card-img-custom" alt="Yoga">
+                        <div class="card-body">
+                            <h5 class="card-title">Yoga</h5>
+                            <p class="card-text">Join our yoga sessions to improve flexibility and find inner peace.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card mb-4 shadow-sm">
+                        <img src="assets/images/nutrition.png" class="card-img-top card-img-custom" alt="Nutritional Advice">
+                        <div class="card-body">
+                            <h5 class="card-title">Nutritional Advice</h5>
+                            <p class="card-text">Get personalized nutritional advice to maintain a healthy diet.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card mb-4 shadow-sm">
+                        <img src="assets/images/mental_health.png" class="card-img-top card-img-custom" alt="Mental Health Support">
+                        <div class="card-body">
+                            <h5 class="card-title">Mental Health Support</h5>
+                            <p class="card-text">Access our mental health support services for a balanced mind.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card mb-4 shadow-sm">
+                        <img src="assets/images/wellness.png" class="card-img-top card-img-custom" alt="Wellness Programs">
+                        <div class="card-body">
+                            <h5 class="card-title">Wellness Programs</h5>
+                            <p class="card-text">Participate in our wellness programs to enhance your overall well-being.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section class="container-fluid bg-light py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Wellness Tips</h2>
+            <ul class="list">
+                <li class="mb-3"><strong>Stay hydrated.</strong> Drink at least 8 glasses of water daily.</li>
+                <li class="mb-3"><strong>Exercise regularly.</strong> Aim for 30 minutes of physical activity each day.</li>
+                <li class="mb-3"><strong>Practice mindfulness.</strong> Engage in mindfulness or meditation to reduce stress.</li>
+                <li class="mb-3"><strong>Get quality sleep.</strong> Ensure 7-8 hours of sleep each night.</li>
+                <li class="mb-3"><strong>Eat a balanced diet.</strong> Include fruits, vegetables, and whole grains in your meals.</li>
+            </ul>
+        </div>
+    </section>
+    <section class="container my-5"></section>
+        <h2 class="text-center mb-4">Testimonials</h2>
+        <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="d-flex justify-content-center">
+                        <div class="col-md-8">
+                            <div class="card">
+                                <div class="card-body">
+                                    <p class="card-text">"The yoga sessions at Seven Seas Spa have transformed my life. I feel more flexible and at peace."</p>
+                                    <footer class="blockquote-footer">Jane Doe</footer>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="d-flex justify-content-center">
+                        <div class="col-md-8">
+                            <div class="card">
+                                <div class="card-body">
+                                    <p class="card-text">"The nutritional advice I received was spot on. I've never felt healthier!"</p>
+                                    <footer class="blockquote-footer">John Smith</footer>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="d-flex justify-content-center">
+                        <div class="col-md-8">
+                            <div class="card">
+                                <div class="card-body">
+                                    <p class="card-text">"The mental health support services are exceptional. I feel more balanced and in control."</p>
+                                    <footer class="blockquote-footer">Emily Johnson</footer>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
